src/components/Nav/index.css
.nav-page {
    position: absolute;
    background: black;
    width: 100vw;
    height: 100vh;
}
.btn-nav {
    text-align: center;
    background: pink;
    color: grey;
    font-weight: bold;
    font-size: 1.875em;
    box-shadow: 0.0625em 0.0625em 0.0625em 0.0625em lightgray;
    border: 0.03125em solid grey;
    border-radius: 0.78125em;
    height: 1.5625em;
    width: 1.5625em;
    position: fixed;
    top: 0.3125em;
    right:0.625em;
}
.btn-nav:hover {
    text-align: center;
    background: orange;
    transition: all .15s linear;
    color: grey;
    font-weight: bold;
    font-size: 2.1875em;
    box-shadow: 0.09375em 0.09375em 0.09375em 0.09375em lightgray;
    border: 0.046875em solid grey;
    border-radius: 1.000em;
    height: 1.71875em;
    width: 1.71875em;
    position: fixed;
    top: 0.25em;
    right: 0.375em;
}
.link-nav-Home a {
    position: relative;
    color: orange;
    margin-top: 50vh;
}
.link-nav-Home a:hover {
    position: relative;
    color: red;
    margin-top: 50vh;
}
.link-nav-Pal a {
    position: relative;
    color: orange;
}
.link-nav-Pal a:hover {
    position: relative;
    color: red;
}
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 667px) 
  and (-webkit-min-device-pixel-ratio: 2) { 
 .btn-nav {
    font-size: 2em;
 }
}

